--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/x-date-pickers": "^7.27.1",
+    "@mui/x-date-pickers-pro": "^7.27.1",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "chart.js": "^4.4.8",
-    "react": "^19.0.0",
+    "date-fns": "^2.30.0",
+    "install": "^0.13.0",
+    "npm": "^11.1.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-datepicker": "^8.1.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.70",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
